--- a/Battleship/Battleship.csproj
+++ b/Battleship/Battleship.csproj
@@ -56,10 +56,29 @@
     <Compile Include="Game.Designer.cs">
       <DependentUpon>Game.cs</DependentUpon>
     </Compile>
+    <Compile Include="GameEndScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GameEndScreen.Designer.cs">
+      <DependentUpon>GameEndScreen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GameStats.cs" />
+    <Compile Include="Launcher.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Launcher.Designer.cs">
+      <DependentUpon>Launcher.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Game.resx">
       <DependentUpon>Game.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GameEndScreen.resx">
+      <DependentUpon>GameEndScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Launcher.resx">
+      <DependentUpon>Launcher.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
