--- a/Battleship/Battleship.csproj
+++ b/Battleship/Battleship.csproj
@@ -82,6 +82,12 @@
       <DependentUpon>GameEndScreen.cs</DependentUpon>
     </Compile>
     <Compile Include="GameStats.cs" />
+    <Compile Include="History.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="History.Designer.cs">
+      <DependentUpon>History.cs</DependentUpon>
+    </Compile>
     <Compile Include="Launcher.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GameEndScreen.resx">
       <DependentUpon>GameEndScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="History.resx">
+      <DependentUpon>History.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Launcher.resx">
       <DependentUpon>Launcher.cs</DependentUpon>
